<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <TextView
        android:id="@+id/txtLogin"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:paddingTop="20dp"
        android:text="@string/LOGIN"
        android:textSize="40sp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lay_Username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:hint="@string/prompt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtLogin"
        app:startIconDrawable="@drawable/outline_account_circle_black_24dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtxtUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:autofillHints="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"


            app:hintTextColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lay_Password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:hint="@string/prompt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lay_Username"
        app:startIconDrawable="@drawable/outline_lock_black_24dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtxtPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
 />
    </com.google.android.material.textfield.TextInputLayout>

    <Switch
        android:id="@+id/swRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remember me"
        app:layout_constraintTop_toBottomOf="@+id/lay_Password"
        app:layout_constraintRight_toRightOf="@id/lay_Password"

        android:layout_marginTop="10dp"
     />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/Yellow"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="64dp"
        android:textColor="@color/black"
        android:text="@string/action_sign_in_short"
        app:layout_constraintTop_toBottomOf="@+id/swRemember"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/action_sign_up"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>