<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/txt_SignupTop"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:paddingTop="20dp"
        android:text="@string/REGISTER"
        android:textSize="40sp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints" />

    <!--Username-->
    <TextView
        android:id="@+id/txt_SignupUserName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_SignupTop"
        android:textColor="@color/black"
        android:text="Username"
        tools:ignore="MissingConstraints">

    </TextView>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lay_SignupUsername"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:hint="@string/your_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_SignupUserName"
        app:startIconDrawable="@drawable/outline_account_circle_black_24dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtxt_SignupUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Email-->
    <TextView
        android:id="@+id/txt_SignupEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lay_SignupUsername"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:text="Email"
        tools:ignore="MissingConstraints">
    </TextView>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lay_SignupEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:hint="@string/your_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_SignupEmail"
        app:startIconDrawable="@drawable/outline_email_black_24dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtxt_SignupEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Password-->
    <TextView
        android:id="@+id/txt_SignupPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/lay_SignupEmail"
        android:text="Password"
        tools:ignore="MissingConstraints">
    </TextView>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lay_SignupPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:hint="@string/prompt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_SignupPassword"
        app:startIconDrawable="@drawable/outline_lock_black_24dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtxt_SignupPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Retype-->
    <TextView
        android:id="@+id/txt_SignupRetypePw"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/lay_SignupPassword"
        android:text="Retype password"
        tools:ignore="MissingConstraints">
    </TextView>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lay_SignupRetypePw"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:hint="Must match above"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_SignupRetypePw"
        app:startIconDrawable="@drawable/outline_lock_black_24dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtxt_SignupRetypePw"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/SpringGreen"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="64dp"
        android:textColor="@color/black"
        android:text="@string/REGISTER"
        app:layout_constraintTop_toBottomOf="@+id/lay_SignupRetypePw"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnRegisterBack"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="?android:attr/selectableItemBackground"
        android:text="Already have an account?"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>